Added table for events, added names for endpoints in APIs for swagger client generation
